# kauri

./: .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTE.md  INSTALL.md  README.md  appveyor.yml
ci/appveyor/: build_and_test_msys.sh
ci/appveyor/msys/: build.sh  test.sh
ci/travis/linux/: before_install.sh  install.sh
cmake/: AddTestsFromGoogleTestExecutable.cmake  DataStructureMap.cmake  DataStructureSet.cmake  GlobalSourceFilesProperties.cmake  KauriGoogleMockDefinitions.cmake  KauriGoogleTestDefinitions.cmake  KauriOutputDirectoryDefinitions.cmake  KauriTargets.cmake  KauriToolchainDefinitions.cmake  KauriUserConfiguration.cmake  LoggableTarget.cmake  SourceFileContainer.cmake
ext/: BuildGoogleTestAndGoogleMock.cmake  CMakeLists.txt
script/: block_make_test_target.py
script/termcolor/: __init__.py
src/: CMakeLists.txt  main.cpp
src/grammar/: CMakeLists.txt  parser.y  scanner.l
test/: CMakeLists.txt  CTestCustom.cmake.in  tests.cpp
